--- a/about.html
+++ b/about.html
@@ -47,9 +47,9 @@
 		  </div>
 		  <div id="navbar3" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-center">
-			  <li class="active"><a href="index.html">Hem</a></li>
+			  <li><a href="index.html">Hem</a></li>
 			  <li><a href="services.html">Våra tjänster</a></li>
-			  <li><a href="about.html">Om oss</a></li>
+			  <li class="active"><a href="about.html">Om oss</a></li>
 			  <li><a href="contact.html">Kontakt</a></li>
 			</ul>
 		  </div>
@@ -59,34 +59,29 @@
 	  </nav>
 	</div>
 	<div class="container">
-        <h3>Välkommen till A&O konsult i Lund</h3>
-        <p class="medium">A&O konsult etablerades 1982. Verksamhetens inriktning har växlat från personalutbildning och organisationsuppdrag inom den offentliga sektorn till ledarskap, kommunikation och strategisk utveckling i mindre, snabbväxande företag i olika branscher till ledarutveckling, projektledarskap och personalutveckling i stora, kända multinationella företagsjättar.</p>
-    <div class="jumbotron">
-		  <div class="container">
-			<h4 align="center">Några av våra kunder och sammarbetspartners:</h4>
-				<div class="row">
-					<a href="https://www.astrazeneca.com"><img class="center-block img-responsive" src="img/clients/astrazeneca.png" alt="AstraZeneca">
-				</div>
-				<p />
-				<div class="row">
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.eon.se"><img class="center-block img-responsive" src="img/clients/eon.png" alt="E-ON"></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.g4s.com"><img class="center-block img-responsive" src="img/clients/g4s.png" alt="G4S"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://garuda.se"><img class="center-block img-responsive" src="img/clients/garuda.png" alt="Garuda AB"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.henley.ac.uk"><img class="center-block img-responsive" src="img/clients/henley.png" alt="Henley"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.ihm.se"><img class="center-block img-responsive" src="img/clients/ihm.png" alt="IHM"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.ikea.com/se/sv/"><img class="center-block img-responsive" src="img/clients/ikea.png" alt="IKEA"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.lu.se/"><img class="center-block img-responsive" src="img/clients/lu.png" alt="Lunds universitet"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.qmatic.com/sv-se/"><img class="center-block img-responsive" src="img/clients/qmatic.png" alt="QMATIC"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.samsung.com/se"><img class="center-block img-responsive" src="img/clients/samsung.png" alt="Samsung"> <p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.volvocars.com/se"><img class="center-block img-responsive" src="img/clients/volvo.png" alt="Volvo"></div>
-				</div>
-				<p />
-				<div class="row">
-					<a href="http://www.sonyericsson.se"><img class="center-block img-responsive" src="img/clients/sonyericsson.png" alt="Sony Ericsson">
-				</div>
-		  </div>
-		</div>
-    </div>
+        <h3>A&O konsults unika kompetens är att:</h3>
+		<ul class="list-style-type:disc">
+			<li>se relevanta och återkommande mönster hos individer, grupper och organisationer</li>
+			<li>experimentera med och tydliggöra olika teamsammansättningars möjligheter och begränsningar</li>
+			<li>föra ut budskap på ett tydligt, begripligt och engagerande sätt</li>
+			<li>skapa trygghet och få människor att växa</li>
+			<li>leda projekt och gå från ord till handling</li>
+			<li>balansera lust och seriöst, målinriktat arbete</li>
+		</ul>
+		<br />
+		<p><strong>Jakten på det lustfyllda lärandet</strong> har varit en drivfjäder och en röd tråd genom min yrkesbana. Få saker är så stimulerande, som att se människor upptäcka att de har utvecklat nya färdigheter, hittat nya tankemönster, eller stärkt tron på sig själva och sin egen förmåga. Framgångsrik pedagogik handlar om att skapa en ”känsla av sammanhang” kring utbildningens nyckelområden. Det gör man genom att:
+    	<ul class="list-style-type:disc">
+			<li>belysa vad kunskapen kan användas till (större meningsfullhet)</li>
+			<li>visa vägen till relevanta fakta, förklaringsmodeller och samband (bättre begriplighet)</li>
+			<li>identifiera fungerande beteendemönster, metoder och förhållningssätt (ökad hanterbarhet)</li>
+		</ul>
+		<br />
+		<p><strong>Pricken över ”i”-et</strong> är överraskningsmomenten, den skräckblandade förtjusningen och självinsikten, som uppnås genom upplevelsebaserade exempel och praktiska tillämpningsövningar.</p>
+		<br />
+		<p><strong>Kontoret ligger i hjärtat av Lund</strong>. Arkitekten Helgo Zettervalls villa på Sandgatan 14 utgör basen för vår verksamhet. Zettervallska villan stod klar 1871 och var under tio års tid den legandariske arkitektens bostad. Byggnaden är även känd i Lund som "Lufthopperiet" där Major Thulin och hans sjukgymnaster bodde. Majoren var sträng och såg till att grindarna låstes innan mörkrets inbrott. "Lufthoppen" syftar på de akrobatiska övningar, som sjukgymnasteleverna ägnade sig åt för att svinga sig över det höga staketet till grannen, Johan Henrik Thomanders studenthem för gossar....</p>
+		<br />
+		<p><strong>De luftiga och spatiösa lokalerna</strong> har inretts som ett modernt, dynamiskt nätverkskontor. Denna tidlösa, rofyllda, kreativa oas delas med:<br /><br />Stefan Jern, ARCANA, leg.psykolog, assoc. professor och konsult.<br /><br /> Anders Hallborg, IHPU, leg.psykolog, administrerar fortbildning för psykologer.<br /><br /> Birramex.
+	</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
