--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,10 @@
 		  </div>
 		  <div id="navbar3" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-center">
-			  <li class="active"><a href="index.html">Hem</a></li>
+			  <li><a href="index.html">Hem</a></li>
 			  <li><a href="services.html">Våra tjänster</a></li>
 			  <li><a href="about.html">Om oss</a></li>
-			  <li><a href="contact.html">Kontakt</a></li>
+			  <li class="active"><a href="contact.html">Kontakt</a></li>
 			</ul>
 		  </div>
 		  <!--/.nav-collapse -->
@@ -58,33 +58,30 @@
 		<!--/.container-fluid -->
 	  </nav>
 	</div>
-	<div class="container">
-        <h3>Välkommen till A&O konsult i Lund</h3>
-        <p class="medium">A&O konsult etablerades 1982. Verksamhetens inriktning har växlat från personalutbildning och organisationsuppdrag inom den offentliga sektorn till ledarskap, kommunikation och strategisk utveckling i mindre, snabbväxande företag i olika branscher till ledarutveckling, projektledarskap och personalutveckling i stora, kända multinationella företagsjättar.</p>
-    <div class="jumbotron">
-		  <div class="container">
-			<h4 align="center">Några av våra kunder och sammarbetspartners:</h4>
-				<div class="row">
-					<a href="https://www.astrazeneca.com"><img class="center-block img-responsive" src="img/clients/astrazeneca.png" alt="AstraZeneca">
-				</div>
-				<p />
-				<div class="row">
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.eon.se"><img class="center-block img-responsive" src="img/clients/eon.png" alt="E-ON"></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.g4s.com"><img class="center-block img-responsive" src="img/clients/g4s.png" alt="G4S"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://garuda.se"><img class="center-block img-responsive" src="img/clients/garuda.png" alt="Garuda AB"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.henley.ac.uk"><img class="center-block img-responsive" src="img/clients/henley.png" alt="Henley"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.ihm.se"><img class="center-block img-responsive" src="img/clients/ihm.png" alt="IHM"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.ikea.com/se/sv/"><img class="center-block img-responsive" src="img/clients/ikea.png" alt="IKEA"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.lu.se/"><img class="center-block img-responsive" src="img/clients/lu.png" alt="Lunds universitet"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.qmatic.com/sv-se/"><img class="center-block img-responsive" src="img/clients/qmatic.png" alt="QMATIC"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.samsung.com/se"><img class="center-block img-responsive" src="img/clients/samsung.png" alt="Samsung"> <p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.volvocars.com/se"><img class="center-block img-responsive" src="img/clients/volvo.png" alt="Volvo"></div>
-				</div>
-				<p />
-				<div class="row">
-					<a href="http://www.sonyericsson.se"><img class="center-block img-responsive" src="img/clients/sonyericsson.png" alt="Sony Ericsson">
-				</div>
-		  </div>
+	<div class="container marketing">
+		<div class="row">
+			<div class="col-lg-4">
+				  <h2>A&O konsult</h2>
+				  <p><strong>Tel: </strong>046 - 211 15 76</p>
+				  <p><strong>Adress: </strong>Box 2168, 220 02 LUND, Sweden</p>
+				  <br />
+			</div>
+		</div>
+        <div class="row">
+			<div class="col-lg-4">
+				  <img class="img-rounded" src="img/work/george-s.jpg" alt="George Smidelik">
+				  <h2>George Smidelik</h2>
+				  <p><strong>E-post: </strong><a href="mailto:george@a-o.se">george@a-o.se</a></p>
+				  <p><strong>Mobil: </strong>070-585 88 77</p>
+				  <br />
+			</div>
+			<div class="col-lg-4">
+				  <img class="img-rounded" src="img/work/monica-s.jpg" alt="Monica Smidelik">
+				  <h2>Monica Smidelik</h2>
+				  <p><strong>E-post: </strong><a href="mailto:monica@a-o.se">monica@a-o.se</a></p>
+				  <p><strong>Mobil: </strong>070-974 35 71</p>
+				  <br />
+			</div>
 		</div>
     </div>
 
