--- a/services.html
+++ b/services.html
@@ -47,8 +47,8 @@
 		  </div>
 		  <div id="navbar3" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-center">
-			  <li class="active"><a href="index.html">Hem</a></li>
-			  <li><a href="services.html">Våra tjänster</a></li>
+			  <li><a href="index.html">Hem</a></li>
+			  <li class="active"><a href="services.html">Våra tjänster</a></li>
 			  <li><a href="about.html">Om oss</a></li>
 			  <li><a href="contact.html">Kontakt</a></li>
 			</ul>
@@ -59,34 +59,64 @@
 	  </nav>
 	</div>
 	<div class="container">
-        <h3>Välkommen till A&O konsult i Lund</h3>
-        <p class="medium">A&O konsult etablerades 1982. Verksamhetens inriktning har växlat från personalutbildning och organisationsuppdrag inom den offentliga sektorn till ledarskap, kommunikation och strategisk utveckling i mindre, snabbväxande företag i olika branscher till ledarutveckling, projektledarskap och personalutveckling i stora, kända multinationella företagsjättar.</p>
-    <div class="jumbotron">
-		  <div class="container">
-			<h4 align="center">Några av våra kunder och sammarbetspartners:</h4>
-				<div class="row">
-					<a href="https://www.astrazeneca.com"><img class="center-block img-responsive" src="img/clients/astrazeneca.png" alt="AstraZeneca">
-				</div>
-				<p />
-				<div class="row">
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.eon.se"><img class="center-block img-responsive" src="img/clients/eon.png" alt="E-ON"></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.g4s.com"><img class="center-block img-responsive" src="img/clients/g4s.png" alt="G4S"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://garuda.se"><img class="center-block img-responsive" src="img/clients/garuda.png" alt="Garuda AB"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.henley.ac.uk"><img class="center-block img-responsive" src="img/clients/henley.png" alt="Henley"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.ihm.se"><img class="center-block img-responsive" src="img/clients/ihm.png" alt="IHM"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.ikea.com/se/sv/"><img class="center-block img-responsive" src="img/clients/ikea.png" alt="IKEA"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.lu.se/"><img class="center-block img-responsive" src="img/clients/lu.png" alt="Lunds universitet"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.qmatic.com/sv-se/"><img class="center-block img-responsive" src="img/clients/qmatic.png" alt="QMATIC"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.samsung.com/se"><img class="center-block img-responsive" src="img/clients/samsung.png" alt="Samsung"> <p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.volvocars.com/se"><img class="center-block img-responsive" src="img/clients/volvo.png" alt="Volvo"></div>
-				</div>
-				<p />
-				<div class="row">
-					<a href="http://www.sonyericsson.se"><img class="center-block img-responsive" src="img/clients/sonyericsson.png" alt="Sony Ericsson">
-				</div>
-		  </div>
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3>Personalutveckling</h3>
+				<p>Uppdragen handlar mestadels om att utveckla samarbete, gruppdynamik, tydliggöra roller, finna bättre arbetsformer, en gemensam värdegrund, eller hitta balans mellan effektivitet och långsiktig välbefinnande.</p>
+			</div>
+			<div class="col-sm-2">
+				<img class="img-rounded" src="img/work/1.jpg" alt="Personalutveckling">
+			</div>
 		</div>
-    </div>
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3>Projektledning</h3>
+				<p>A&O konsult utbildar och coachar projektledare på uppdrag av IHM Business School. Projektstöd och utveckling av projektmodeller är också en del av vår verksamhet. Vi är ständigt involverade i olika utvecklings- och samverkansprojekt.</p>
+			</div>
+			<div class="col-sm-2">
+				<img class="img-rounded" src="img/work/2.jpg" alt="Personalutveckling">
+			</div>
+		</div>
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3>Nätverksstöd</h3>
+				<p>Initiering och vitalisering av professionella nätverk är en del av vårt arbete.</p>
+			</div>
+			<div class="col-sm-2">
+				<img class="img-rounded" src="img/work/3.jpg" alt="Personalutveckling">
+			</div>
+		</div>
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3>Ledarutveckling</h3>
+				<p>Ledarskap, förändringsarbete, medarbetarsamtal, situationsanpassat ledarskap, organisationspsykologi, motivationsarbete, beslutsprocesser och målstyrning är några av de områden som såväl erfarna cheferna som unga ambitiösa ledarkandidater har stor användning av.</p>
+			</div>
+			<div class="col-sm-2">
+			<br />
+				<img class="img-rounded" src="img/work/4.jpg" alt="Personalutveckling">
+			</div>
+		</div>
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3>Vuxenpedagogik</h3>
+				<p>Utveckling av interaktiva, upplevelsebaserade inlärningsmetoder är en av våra nyckelkompetenser. Massor med akademisk forskning och praktisk erfarenhet utgör grunden för effektivt och lustfyllt lärande. Vi utbildar professionella utbildare och konsulter samtidigt som vi lever som vi lär.</p>
+			</div>
+			<div class="col-sm-2">
+			<br />
+				<img class="img-rounded" src="img/work/5.jpg" alt="Personalutveckling">
+			</div>
+		</div>
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3>Teambuilding</h3>
+				<p>Kunskapen om teamets sammansättning, arbetsformer, livscykel, dynamik, fallgropar och potential är guld värd i moderna organisationer. Att ge det nya projektet en bra kick-off, att hjälpa teamet att förebygga onödiga konflikter, samt kartlägga teamets olika medarbetare är rätt typ av uppdrag för A&O konsult.</p>
+			</div>
+			<div class="col-sm-2 float-bottom">
+			<br />
+				<img class="img-rounded" src="img/work/6.jpg" alt="Personalutveckling">
+			</div>
+		</div>
+	</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
