--- a/services.html
+++ b/services.html
@@ -113,7 +113,7 @@
 			</div>
 			<div class="col-sm-2 float-bottom">
 			<br />
-				<img class="img-rounded" src="img/work/6.jpg" alt="Personalutveckling">
+				<img class="img-rounded" src="img/work/6.jpg" alt="Personalutveckling"><p />
 			</div>
 		</div>
 	</div>
