--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 	  </nav>
 	</div>
 	<div class="container">
-        <h3>A&O konsults unika kompetens är att:</h3>
+        <h3><strong>A&O konsults unika kompetens är att:</strong></h3>
 		<ul class="list-style-type:disc">
 			<li>se relevanta och återkommande mönster hos individer, grupper och organisationer</li>
 			<li>experimentera med och tydliggöra olika teamsammansättningars möjligheter och begränsningar</li>
