--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
 	<div class="container marketing">
 		<div class="row">
 			<div class="col-lg-4">
-				  <h2>A&O konsult</h2>
+				  <h2><strong>A&O konsult</strong></h2>
 				  <p><strong>Tel: </strong>046 - 211 15 76</p>
 				  <p><strong>Adress: </strong>Box 2168, 220 02 LUND, Sweden</p>
 				  <br />
@@ -70,14 +70,14 @@
         <div class="row">
 			<div class="col-lg-4">
 				  <img class="img-rounded" src="img/work/george-s.jpg" alt="George Smidelik">
-				  <h2>George Smidelik</h2>
+				  <h2><strong>George Smidelik</strong></h2>
 				  <p><strong>E-post: </strong><a href="mailto:george@a-o.se">george@a-o.se</a></p>
 				  <p><strong>Mobil: </strong>070-585 88 77</p>
 				  <br />
 			</div>
 			<div class="col-lg-4">
 				  <img class="img-rounded" src="img/work/monica-s.jpg" alt="Monica Smidelik">
-				  <h2>Monica Smidelik</h2>
+				  <h2><strong>Monica Smidelik</strong></h2>
 				  <p><strong>E-post: </strong><a href="mailto:monica@a-o.se">monica@a-o.se</a></p>
 				  <p><strong>Mobil: </strong>070-974 35 71</p>
 				  <br />
