--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 	  </nav>
 	</div>
 	<div class="container">
-        <h2>Välkommen till A&O konsult i Lund</h2>
+        <h2><strong>Välkommen till A&O konsult i Lund</strong></h2>
         <p class="medium">A&O konsult etablerades 1982. Verksamhetens inriktning har växlat från personalutbildning och organisationsuppdrag inom den offentliga sektorn till ledarskap, kommunikation och strategisk utveckling i mindre, snabbväxande företag i olika branscher till ledarutveckling, projektledarskap och personalutveckling i stora, kända multinationella företagsjättar.</p>
 		<div class="jumbotron">
 		  <div class="container">
-			<h4 align="center">Några av våra kunder och sammarbetspartners:</h4>
+			<h4 align="center"><strong>Några av våra kunder och sammarbetspartners:</strong></h4>
 				<div class="row">
 					<a href="https://www.astrazeneca.com"><img class="center-block img-responsive" src="img/clients/astrazeneca.png" alt="AstraZeneca">
 				</div>
