--- a/about.html
+++ b/about.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="A&O konsult, arbets- och organisationskonsult i Lund. George Smidelik och Monica Smidelik är sedan 1982 verksamma inom organisationsutveckling, vuxenpedagogik, projektledning, personal- och ledarutveckling. Våra kunder är framför allt medelstora och stora svenska och multinationella företag">
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#222222">
+	<!-- Windows Phone -->
+	<meta name="msapplication-navbutton-color" content="#222222">
+	<!-- iOS Safari -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#222222">
+	<meta name="description" content="A&O konsult, arbets- och organisationskonsult i Lund. George Smidelik och Monica Smidelik är sedan 1982 verksamma inom organisationsutveckling, vuxenpedagogik, projektledning, personal- och ledarutveckling. Våra kunder är framför allt medelstora och stora svenska och multinationella företag">
     <meta name="keywords" content="arbetsledning, arbetsorganisation, arbetspsykologi, chefs- och ledarutveckling, företagskultur, förändringsarbete, grupputveckling, handledning, intern marknadsföring, klimatanalys, kommunikation, konflikthantering, konsultmetodik, kreativitet, kvalitetsutveckling, ledarskap, management, medarbetarsamtal, mentorskap, metodutveckling, motivation, målstyrning, mötesteknik, organisationsanalys, organisationskonsult, organisationsutveckling, pedagogik, personalutbildning, personalutveckling, personlig utveckling, projekt, projektledning, psykologi, stress, teamutveckling, utbildning, utbildningskonsult, utbildningsmaterial, utvecklingssamtal, verksamhetsutveckling, vuxenpedagogik">
     <link rel="icon" href="img/favicon.ico">
 
