--- a/index_en.html
+++ b/index_en.html
@@ -67,7 +67,7 @@
 	</div>
 	<div class="container">
         <h2><strong>Welcome to A&O consulting</strong></h2>
-        <p class="medium">A&O consulting was established in 1982. Our focal point has shifted from staff training and organisational development within the public sector towards leadership, communication and strategic development within smaller, rapidly expanding businesses within various branches of industry. In addition, A&O consulting provides leadership development, project management and staff development within large, well-established multinational giants.</p>
+        <p class="medium">A&O consulting was established in 1982. Our focal point has shifted from staff training and organisational development within the public sector towards leadership, communication and strategic development at smaller, rapidly expanding businesses within various branches of industry. Additionally, A&O consulting provides leadership development, project management and staff development within large, well-established multinational giants.</p>
 		<div class="jumbotron">
 			<div class="container">
 				<h4 align="center"><strong>Some of our clients and partners:</strong></h4>
