--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
 		<div class="row row-eq-height">
 			<div class="col-6 col-xs-10">
 				<h3><strong>Personalutveckling</strong></h3>
-				<p>Uppdragen handlar mestadels om att utveckla samarbete, gruppdynamik, tydliggöra roller, finna bättre arbetsformer, en gemensam värdegrund, eller hitta balans mellan effektivitet och långsiktig välbefinnande.
+				<p>Uppdragen handlar mestadels om att utveckla samarbete, gruppdynamik, tydliggöra roller, finna bättre arbetsformer, en gemensam värdegrund, eller hitta balans mellan effektivitet och långsiktig välbefinnande.</p>
 			</div>
 			<div class="col-sm-2">
 				<img class="img-rounded" src="img/work/1.jpg" alt="Personalutveckling">
@@ -78,7 +78,7 @@
 		<div class="row row-eq-height">
 			<div class="col-6 col-xs-10">
 				<h3><strong>Projektledning</strong></h3>
-				<p>A&O konsult utbildar och coachar projektledare på uppdrag av IHM Business School. Projektstöd och utveckling av projektmodeller är också en del av vår verksamhet. Vi är ständigt involverade i olika utvecklings- och samverkansprojekt.
+				<p>A&O konsult utbildar och coachar projektledare på uppdrag av IHM Business School. Projektstöd och utveckling av projektmodeller är också en del av vår verksamhet. Vi är ständigt involverade i olika utvecklings- och samverkansprojekt.</p>
 			</div>
 			<div class="col-sm-2">
 				<img class="img-rounded" src="img/work/2.jpg" alt="Personalutveckling">
@@ -87,7 +87,7 @@
 		<div class="row row-eq-height">
 			<div class="col-6 col-xs-10">
 				<h3><strong>Nätverksstöd</strong></h3>
-				<p>Initiering och vitalisering av professionella nätverk är en del av vårt arbete.
+				<p>Initiering och vitalisering av professionella nätverk är en del av vårt arbete.</p>
 			</div>
 			<div class="col-sm-2">
 				<img class="img-rounded" src="img/work/3.jpg" alt="Personalutveckling">
@@ -96,7 +96,7 @@
 		<div class="row row-eq-height">
 			<div class="col-6 col-xs-10">
 				<h3><strong>Ledarutveckling</strong></h3>
-				<p>Ledarskap, förändringsarbete, medarbetarsamtal, situationsanpassat ledarskap, organisationspsykologi, motivationsarbete, beslutsprocesser och målstyrning är några av de områden som såväl erfarna cheferna som unga ambitiösa ledarkandidater har stor användning av.
+				<p>Ledarskap, förändringsarbete, medarbetarsamtal, situationsanpassat ledarskap, organisationspsykologi, motivationsarbete, beslutsprocesser och målstyrning är några av de områden som såväl erfarna cheferna som unga ambitiösa ledarkandidater har stor användning av.</p>
 			</div>
 			<div class="col-sm-2">
 			<br />
@@ -106,7 +106,7 @@
 		<div class="row row-eq-height">
 			<div class="col-6 col-xs-10">
 				<h3><strong>Vuxenpedagogik</strong></h3>
-				<p>Utveckling av interaktiva, upplevelsebaserade inlärningsmetoder är en av våra nyckelkompetenser. Massor med akademisk forskning och praktisk erfarenhet utgör grunden för effektivt och lustfyllt lärande. Vi utbildar professionella utbildare och konsulter samtidigt som vi lever som vi lär.
+				<p>Utveckling av interaktiva, upplevelsebaserade inlärningsmetoder är en av våra nyckelkompetenser. Massor med akademisk forskning och praktisk erfarenhet utgör grunden för effektivt och lustfyllt lärande. Vi utbildar professionella utbildare och konsulter samtidigt som vi lever som vi lär.</p>
 			</div>
 			<div class="col-sm-2">
 			<br />
@@ -116,7 +116,7 @@
 		<div class="row row-eq-height">
 			<div class="col-6 col-xs-10">
 				<h3><strong>Teambuilding</strong></h3>
-				<p>Kunskapen om teamets sammansättning, arbetsformer, livscykel, dynamik, fallgropar och potential är guld värd i moderna organisationer. Att ge det nya projektet en bra kick-off, att hjälpa teamet att förebygga onödiga konflikter, samt kartlägga teamets olika medarbetare är rätt typ av uppdrag för A&O konsult.
+				<p>Kunskapen om teamets sammansättning, arbetsformer, livscykel, dynamik, fallgropar och potential är guld värd i moderna organisationer. Att ge det nya projektet en bra kick-off, att hjälpa teamet att förebygga onödiga konflikter, samt kartlägga teamets olika medarbetare är rätt typ av uppdrag för A&O konsult.</p>
 			</div>
 			<div class="col-sm-2 float-bottom">
 			<br />
