--- a/services_en.html
+++ b/services_en.html
@@ -69,7 +69,7 @@
 		<div class="row row-eq-height">
 			<div class="col-6 col-xs-10">
 				<h3><strong>Staff development</strong></h3>
-				<p>The contracts mostly concern developing cooperativiness, group dynamics, clarifying roles, finding better work methods, common base values, or finding the balance between effectiviness and long-lasting well-being.</p>
+				<p>Our work mostly concern developing cooperativiness, group dynamics, clarifying roles, finding better work methods, common base values, or finding the balance between effectiviness and long-lasting well-being.</p>
 			</div>
 			<div class="col-sm-2">
 				<img class="img-rounded" src="img/work/1.jpg" alt="Personalutveckling">
