--- a/contact_en.html
+++ b/contact_en.html
@@ -79,14 +79,14 @@
 				  <img class="img-rounded" src="img/work/george-s.jpg" alt="George Smidelik">
 				  <h2><strong>George Smidelik</strong></h2>
 				  <p><strong>Email: </strong><a href="mailto:george@a-o.se">george@a-o.se</a></p>
-				  <p><strong>Mobile: </strong>070-585 88 77</p>
+				  <p><strong>Mobile: </strong>+46(0)70-585 88 77</p>
 				  <br />
 			</div>
 			<div class="col-lg-4">
 				  <img class="img-rounded" src="img/work/monica-s.jpg" alt="Monica Smidelik">
 				  <h2><strong>Monica Smidelik</strong></h2>
 				  <p><strong>Email: </strong><a href="mailto:monica@a-o.se">monica@a-o.se</a></p>
-				  <p><strong>Mobile: </strong>070-974 35 71</p>
+				  <p><strong>Mobile: </strong>+46(0)70-974 35 71</p>
 				  <br />
 			</div>
 		</div>
