--- a/services.html
+++ b/services.html
@@ -81,7 +81,7 @@
 				<p>A&O konsult utbildar och coachar projektledare på uppdrag av IHM Business School. Projektstöd och utveckling av projektmodeller är också en del av vår verksamhet. Vi är ständigt involverade i olika utvecklings- och samverkansprojekt.</p>
 			</div>
 			<div class="col-sm-2">
-				<img class="img-rounded" src="img/work/2.jpg" alt="Personalutveckling">
+				<img class="img-rounded" src="img/work/2.jpg" alt="Projektledning">
 			</div>
 		</div>
 		<div class="row row-eq-height">
@@ -90,7 +90,7 @@
 				<p>Initiering och vitalisering av professionella nätverk är en del av vårt arbete.</p>
 			</div>
 			<div class="col-sm-2">
-				<img class="img-rounded" src="img/work/3.jpg" alt="Personalutveckling">
+				<img class="img-rounded" src="img/work/3.jpg" alt="Nätverksstöd">
 			</div>
 		</div>
 		<div class="row row-eq-height">
@@ -100,7 +100,7 @@
 			</div>
 			<div class="col-sm-2">
 			<br />
-				<img class="img-rounded" src="img/work/4.jpg" alt="Personalutveckling">
+				<img class="img-rounded" src="img/work/4.jpg" alt="Ledarutveckling">
 			</div>
 		</div>
 		<div class="row row-eq-height">
@@ -110,7 +110,7 @@
 			</div>
 			<div class="col-sm-2">
 			<br />
-				<img class="img-rounded" src="img/work/5.jpg" alt="Personalutveckling">
+				<img class="img-rounded" src="img/work/5.jpg" alt="Vuxenpedagogik">
 			</div>
 		</div>
 		<div class="row row-eq-height">
@@ -120,7 +120,7 @@
 			</div>
 			<div class="col-sm-2 float-bottom">
 			<br />
-				<img class="img-rounded" src="img/work/6.jpg" alt="Personalutveckling"><p />
+				<img class="img-rounded" src="img/work/6.jpg" alt="Teambuilding"><p />
 			</div>
 		</div>
 	</div>
