--- a/services_en.html
+++ b/services_en.html
@@ -69,10 +69,10 @@
 		<div class="row row-eq-height">
 			<div class="col-6 col-xs-10">
 				<h3><strong>Staff development</strong></h3>
-				<p>Our work mostly concerns developing cooperativiness, group dynamics, clarifying roles, finding better work methods, common base values, or finding the balance between effectiviness and long-lasting well-being.</p>
+				<p>Our work mostly concerns developing cooperativeness, group dynamics, clarifying roles, finding better work methods, common base values, or finding the balance between effectiveness and long-lasting well-being.</p>
 			</div>
 			<div class="col-sm-2">
-				<img class="img-rounded" src="img/work/1.jpg" alt="Personalutveckling">
+				<img class="img-rounded" src="img/work/1.jpg" alt="Staff development">
 			</div>
 		</div>
 		<div class="row row-eq-height">
@@ -81,7 +81,7 @@
 				<p>A&O consulting trains and coaches project managers on IHM Business School's behalf. Project support and developing project models is also part of our repertoire. We are constantly involved in various development and collaborative projects.</p>
 			</div>
 			<div class="col-sm-2">
-				<img class="img-rounded" src="img/work/2.jpg" alt="Personalutveckling">
+				<img class="img-rounded" src="img/work/2.jpg" alt="Project management">
 			</div>
 		</div>
 		<div class="row row-eq-height">
@@ -90,17 +90,17 @@
 				<p>Initiation and revitalisation of professional networks is part of our work.</p>
 			</div>
 			<div class="col-sm-2">
-				<img class="img-rounded" src="img/work/3.jpg" alt="Personalutveckling">
+				<img class="img-rounded" src="img/work/3.jpg" alt="Networking">
 			</div>
 		</div>
 		<div class="row row-eq-height">
 			<div class="col-6 col-xs-10">
 				<h3><strong>Management training</strong></h3>
-				<p>Leadership, change management, performance meetings, situational leadership, organisational psychology, motivational work, decision processes and goal orientation are some the of the areas that are of great use for both experienced managers and ambitious management candidates.</p>
+				<p>Leadership, change management, performance meetings, situational leadership, organisational psychology, motivational work, decision processes and goal orientation are some of the areas that are of great use for both experienced managers and ambitious management candidates.</p>
 			</div>
 			<div class="col-sm-2">
 			<br />
-				<img class="img-rounded" src="img/work/4.jpg" alt="Personalutveckling">
+				<img class="img-rounded" src="img/work/4.jpg" alt="Management training">
 			</div>
 		</div>
 		<div class="row row-eq-height">
@@ -110,17 +110,17 @@
 			</div>
 			<div class="col-sm-2">
 			<br />
-				<img class="img-rounded" src="img/work/5.jpg" alt="Personalutveckling">
+				<img class="img-rounded" src="img/work/5.jpg" alt="Andragogy">
 			</div>
 		</div>
 		<div class="row row-eq-height">
 			<div class="col-6 col-xs-10">
 				<h3><strong>Teambuilding</strong></h3>
-				<p>The knowledge of the team's composition, work methods, life cycle, dynamics and potential pitfalls is extremely valuable within modern organisations. To provide your latest project with a good kick-off, to help the team in preventing unnecessary conflicts and to identify the team's different roles is just the job for A&O consulting.</p>
+				<p>Knowledge of the team's composition, work methods, life cycle, dynamics and potential pitfalls is extremely valuable within modern organisations. Providing your latest project with an excellent kick-off, helping the team in preventing unnecessary conflicts and identifying the team's different roles is just the job for A&O consulting.</p>
 			</div>
 			<div class="col-sm-2 float-bottom">
 			<br />
-				<img class="img-rounded" src="img/work/6.jpg" alt="Personalutveckling"><p />
+				<img class="img-rounded" src="img/work/6.jpg" alt="Teambuilding"><p />
 			</div>
 		</div>
 	</div>
